--- a/Docker/proyectos/portfolio/deploy/docker-compose.yml
+++ b/Docker/proyectos/portfolio/deploy/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   web:
     build: #compilar la imagen a partir del Dockerfile
-      context: . #raiz del proyecto
-      dockerfile: Dockerfile
+      context: .. #raiz del proyecto
+      dockerfile: deploy/Dockerfile
     container_name: ctportfolio
     ports:
       - "8810:80"
